Fix #2986: Improve contrast of search placeholder text (#2988)
* Update search placeholder color contrast

* Remove the unnecessary search placeholder pseudo elements


---------

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,10 @@ header h1 span {
     direction: ltr;
 }
 
+#search::placeholder {
+    color: lightgray;
+}
+
 .search .search-container label {
     background: url('../img/spyglass.png');
     background-size: 20px 20px;
